[PLAT-2128] Fix alert message field to print the whole message + alert channel error message fix
Summary:
Alert message field was limited in size and long messages got truncated. Fixed that by making it fix to content.
Also, fixed message for missing SMTP config.
One more bug found during testing was that platform type alert configs were not correctly updating underlying definitions.
Also fixed tests in Idea - kamon was using old version of okhttp and added dependency tree plugin to the project

Test Plan:
Configure wrong email alert channel and assing to alert config.
Raise this alert and see the correct error message.
Modify alert channel alert config and make sure alert rule file is updated.
Check kamon metrics are available.

Screenshot of long alert message:
{F20324}

Reviewers: spotachev

Reviewed By: spotachev

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D13717

--- a/managed/ui/src/components/alerts/AlertList/AlertDetails.scss
+++ b/managed/ui/src/components/alerts/AlertList/AlertDetails.scss
@@ -52,6 +52,13 @@
       overflow-y: auto;
       margin-bottom: 5px;
     }
+
+    .alert-label-message {
+      display: inline-block;
+      font-size: 12px;
+      max-height: 200px;
+      margin-bottom: 5px;
+    }
   }
   .marginTop {
     margin-top: 24px;
